# BIA-IMG-Captioner

./: README.md  pyproject.toml
img_cap_engine/app/: utils.py
img_cap_engine/core/: config.py
img_cap_engine/data/: dataloader.py
img_cap_engine/model/: BIAConv2DEmbedding.py  BIAImgCaptioner.py  BIALayerNorm.py  BIAPosEncoding.py  Decoder.py  Encoder.py  LSRCrossEntropy.py  ResFFNet.py  ResMHAtten.py  utils.py
